<resources>
    <string name="app_name">网元助手</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="remember">Remember Me</string>
    <string name="autolog">Auto Log</string>
    <string name="nonetwork">sorry,there isn\'t network</string>
    <string name="device">Device</string>
    <string name="paizhao">Photo</string>
    <string name="luxiang">Video</string>
    <string name="setting">Settings</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="sure">Message</string>
    <string name="yes">OK</string>
    <string name="back">Back</string>
    <string name="Cancel">Cancel</string>
    <string name="loginFail">Wrong user name or password. Back and try again?</string>
    <string name="quit">Are you sure that you want to exit?</string>
    <string name="lostConnectionTitle">Lost connection</string>
    <string name="lostConnectionMessage">Reconnect or exist?</string>
    <string name="loading">Loading…</string>
    <string name="landev">Local device</string>
    <string name="register">Register</string>
    <string name="nickname">Nickname:</string>
    <string name="passwordagain">Confirm Password:</string>
    <string name="passwordinmatch">The 2 passwords do not match!Please enter again…</string>
    <string name="passwordmatch">The new password and old one  are the same!</string>
    <string name="inputIncomplete">All the input items can not be null!</string>
    <string name="registersuccess">Register Success!</string>
    <string name="registerfailed">Register Failed!</string>
    <string name="username_has_beenused">User name has been used！</string>
    <string name="userdevice">Remote device</string>
    <string name="changepassword">Change password</string>
    <string name="newpassword">New Password:</string>
    <string name="newpasswordagain">New Password Again:</string>
    <string name="changepasswordsuccess">Change Password Success!</string>
    <string name="changepasswordfailed">Change Password Failed!</string>
    <string name="deviceinfo">Device Info</string>
    <string name="newdevicename">New Device Name:</string>
    <string name="changedevnamesuccess">Change Device Name Success!</string>
    <string name="changedevnamefailed">Change Device Name Failed!</string>
    <string name="deviceinfomation">Device Infomation</string>
    <string name="devicename">Device name: </string>
    <string name="softwareversion">Software Version :</string>
    <string name="hardwareversion">Hardware Version :</string>
    <string name="userlogining">Try to login, please wait… </string>
    <string name="timeout">Connect to server timeout!</string>
    <string name="wait">Wait</string>
    <string name="registerring">Try to register, please wait…</string>
    <string name="userNameLenRequire">Sorry, the length of user name should between 3 and 20!</string>
    <string name="userNameCharRequire">Sorry, only capital letters(A\–Z), letters(a\–z), numbers (0\-9), underline(_) or email format!</string>
    <string name="passwordLenRequire">Sorry, the length of password should between 6 and 20!</string>
    <string name="searching">Searching, please wait…</string>
    <string name="deleteMessage">Are you sure that you want to delete it?</string>
    <string name="add">Add</string>
    <string name="deleteLanDev">Delete this device</string>
    <string name="enterPassword">Please Enter Password!</string>
    <string name="wiredNetworkParameters">Wired Network Parameters</string>
    <string name="wirelessNetworkParameters">Wireless Network Parameters</string>
    <string name="videoAudioParameters">Video and Audio</string>
    <string name="net3gParameters">3G/4G Parameters</string>
    <string name="binding">Binding, please wait…</string>
    <string name="unbind">Unbind</string>
    <string name="unbinding">Unbinding, please wait…</string>
    <string name="unbindSuccess">Unbind the device successfully!</string>
    <string name="unbindFailed">Unbind the device failed!</string>
    <string name="settingDevPara">Parameter Setting</string>
    <string name="deviceName">Device Name :</string>
    <string name="invalidPassword">Invalid username or password!</string>
    <string name="mask">Mask:</string>
    <string name="gateWay">Gate way:</string>
    <string name="dns">DNS:</string>
    <string name="ssid">SSID:</string>
    <string name="encryption">Encryption mode:</string>
    <string name="setWiredParameter">Setting Wired Network Parameter</string>
    <string name="settingWiredParameter">Setting Wired Network Parameter, please wait…</string>
    <string name="setWirelessParameter">Setting Wireless Network Parameter</string>
    <string name="settingWirelessParameter">Setting wireless network parameter, please wait…</string>
    <string name="setWiredParaSuccess">Set wired network parameter successfully!</string>
    <string name="setWiredParaFailed">Set wired network parameter failed!</string>
    <string name="setWirelessParaSuccess">Set wireless network parameter successfully!</string>
    <string name="setWirelessParaFailed">Set wireless network parameter failed!</string>
    <string name="frameRate"> Frame rate(  fps):</string>
    <string name="codeRate">Bit rate(Kbps):</string>
    <string name="lrRotation">Mirror</string>
    <string name="udRotation">Flip</string>
    <string name="setMediaParameter">Setting Audio Video Parameter</string>
    <string name="setttingMediaParameter">Setting audio video parameter, please wait…</string>
    <string name="setMediaParaSuccess">Set audio video parameter successfully!</string>
    <string name="setMediaParaFailed">Set audio video parameter failed!</string>
    <string name="invalidIP">Invalid IP!</string>
    <string name="invalidMask">Invalid mask!</string>
    <string name="invalidGateWay">Invalid gate way!</string>
    <string name="invalidDNS">Invalid DNS!</string>
    <string name="zoom_in">Zoom in</string>
    <string name="zoom_out">Zoom out</string>
    <string name="remark">Remark:</string>
    <string name="id">Series num:</string>
    <string name="ip_addr">IP addr:</string>
    <string name="general">System Information</string>
    <string name="setGeneralPara">Name, Password, Software Version, Series Number</string>
    <string name="settingGeneralPara">Setting general parameter , please wait…</string>
    <string name="setGeneralParaFailed">Set general parameter failed!</string>
    <string name="setGeneralParaSuccess">Set general parameter successfully!</string>
    <string name="setAlarm">Alarm and record</string>
    <string name="settingAlarm">Setting alarm and record parameters</string>
    <string name="setAlarmSuccess">Set alarm and record parameters successfully!</string>
    <string name="setAlarmFailed">Set alarm and record parameters failed!</string>
    <string name="setting3G">Setting 3G/4G parameters...</string>
    <string name="set3GSuccess">Set the 3G/4G parameter successfully!</string>
    <string name="timezone">Time zone:</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="btnGetMobileTime">Phone time</string>
    <string name="reboot">Reboot</string>
    <string name="defaultSetting">Default setting</string>
    <string name="dhcp">DHCP:</string>
    <string name="wiredParameterSetting">Wired Parameter</string>
    <string name="wifiClientMode">Wifi client:</string>
    <string name="videoFormat">Video format:</string>
    <string name="audio">Audio</string>
    <string name="alarm">Alarm</string>
    <string name="none">none</string>
    <string name="sdCard">SD card</string>
    <string name="server">Server:</string>
    <string name="pleaseLoginFirst">Please login first</string>
    <string name="continue_setting">Continue</string>
    <string name="retry">Retry</string>
    <string name="invalidIPAddress">Invalid IP address!</string>
    <string name="systemError">System error!</string>
    <string name="welcome">Welcome to use 51See</string>
    <string name="oldUser">Existing account</string>
    <string name="newUser">New user</string>
    <string name="login">Login</string>
    <string name="confirmation">Verify</string>
    <string name="account">Account</string>
    <string name="confirmPwd">Re-enter the password</string>
    <string name="exit">Exit</string>
    <string name="select">Please select</string>
    <string name="comfirm">OK</string>
    <string name="plSelect">Please select</string>
    <string name="plWait">Please wait for about 1 minute, your camera is connecting to platform.</string>
    <string name="next">Next</string>
    <string name="conCamAPed">Connected to camera AP</string>
    <string name="setDHcp">Set DHCP successfully</string>
    <string name="setFail">Settings failed, not connected to camera.</string>
    <string name="setTimeout">Settings TimeOut!</string>
    <string name="guideCheckConnectSee51">Checking whether camera connected to platform...</string>
    <string name="guideAddingCam">Adding camera...</string>
    <string name="guideConnectTimeout">Connection timeout, please retry...</string>
    <string name="guideCamConnectSee51Sucess">Camera is connected to platform.</string>
    <string name="guideCamHasAdded">Camera added to your account.</string>
    <string name="guideCamHasBeenBind">Add failed, the camera has been bound.</string>
    <string name="guideAccountOrPwdError">Wrong account and password.</string>
    <string name="guideTipTitle">Choice</string>
    <string name="guideComplexInstall">Setup and add devices</string>
    <string name="guideSimleInstall">Add devices by ID</string>
    <string name="guideSmartConnection">Add by Smart Connection</string>
    <string name="guideQRCodeError">Illegal equipment, The length of equipment\'s ID must be twelve!</string>
    <string name="scaningdimensioncode">Scan the QR code behind the camera. If the tag is unclear, enter it manually.</string>
    <string name="scaningrfdimensioncode">Scan the QR code behind the rf. If the tag is unclear, enter it manually.</string>
    <string name="orSelectDeviceId">Or select from the following ID:</string>
    <string name="hintRFId">8-bit SN</string>
    <string name="reticleLink">Note: Connect one end of network cable to router, and connect the other end to camera. Connect your phone to wireless network of the router. If network cannot be found, please reset the camera.</string>
    <string name="searchedCamera">Searched camera</string>
    <string name="inputWifiPromt">Enter the SSID and password of the wireless network of the router, or click the button in the upper right corner and select a network from the history.</string>
    <string name="nowWire">Current wireless network:</string>
    <string name="reticleInternet">Connect to the network through a network cable</string>
    <string name="notice3GLink">Connect to the network using a 3G/4G card</string>
    <string name="wifiInternet">Connect to the network by wifi</string>
    <string name="disconnectWifi">Failed to connect to Wi-Fi</string>
    <string name="orSetWifi">Set the radio function or not?</string>
    <string name="yes01">Yes</string>
    <string name="myfont">造字工房郎倩</string>
    <string name="net_adapter">网络适配器：</string>
    <string name="link_state">连接状态：</string>
    <string name="ip_address_">IP地址：</string>
    <string name="gateway">网关地址：</string>
    <string name="mask_">子网掩码：</string>
    <string name="dns1">DNS1：</string>
    <string name="dns2">DNS2：</string>
    <string name="mac_address">MAC地址：</string>
    <string name="recv_">接收流量：</string>
    <string name="send_">发送流量：</string>
    <string name="sim_state_">SIM卡状态：</string>
    <string name="signal_trad_">信号强度：</string>
    <string name="operator_">运营商：</string>
    <string name="standard_">制式：</string>
    <string name="phone_number_">号码：</string>
</resources>