<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#90A4AE">

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:background="@drawable/running_statu_icon_back"
            android:onClick="revisePWOnFinish" />

        <TextView
            android:id="@+id/revise_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/imageButton1"
            android:fontFamily="@string/myfont"
            android:text="密码修改"
            android:textColor="#fff"
            android:textSize="@dimen/DIMEN_38PX" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/DIMEN_100PX"
        android:layout_marginLeft="@dimen/DIMEN_100PX"
        android:layout_marginRight="@dimen/DIMEN_100PX"
        android:layout_marginTop="@dimen/DIMEN_30PX"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/yuanshimima_tv"
            android:layout_width="0dp"
            android:layout_height="@dimen/DIMEN_60PX"
            android:layout_weight="2"

            android:fontFamily="@string/myfont"
            android:text="@string/oldpassword"
            android:textColor="@color/fontcolor"
            android:textSize="@dimen/DIMEN_30PX" />

        <EditText
            android:id="@+id/revise_oldpassword"
            android:layout_width="0dp"
            android:layout_height="@dimen/DIMEN_60PX"
            android:layout_weight="4"
            android:background="@drawable/beijingtiao"
            android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:ems="13"
            android:fontFamily="@string/myfont"
            android:hint="输入原始密码"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/DIMEN_20PX"
            android:textColor="@color/fontcolor"
            android:textSize="@dimen/DIMEN_30PX" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/DIMEN_100PX"
        android:layout_marginLeft="@dimen/DIMEN_100PX"
        android:layout_marginRight="@dimen/DIMEN_100PX"
        android:layout_marginTop="@dimen/DIMEN_15PX"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/xinmima_tv"
            android:layout_width="0dp"
            android:layout_height="@dimen/DIMEN_60PX"
            android:layout_weight="2"
            android:fontFamily="@string/myfont"
            android:text="@string/newpassword"
            android:textColor="@color/fontcolor"
            android:textSize="@dimen/DIMEN_30PX" />

        <EditText
            android:id="@+id/revise_newpassword"
            android:layout_width="0dp"
            android:layout_height="@dimen/DIMEN_60PX"
            android:layout_weight="4"
            android:background="@drawable/beijingtiao"
            android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:ems="13"
            android:fontFamily="@string/myfont"
            android:hint="输入新密码 "
            android:inputType="textPassword"
            android:paddingLeft="@dimen/DIMEN_20PX"
            android:textColor="@color/fontcolor"
            android:textSize="@dimen/DIMEN_30PX">

            <requestFocus />
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/DIMEN_100PX"
        android:layout_marginLeft="@dimen/DIMEN_100PX"
        android:layout_marginRight="@dimen/DIMEN_100PX"
        android:layout_marginTop="@dimen/DIMEN_15PX"
        android:fontFamily="@string/myfont"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/querenmima"
            android:layout_width="0dp"
            android:layout_height="@dimen/DIMEN_60PX"
            android:layout_weight="2"
            android:fontFamily="@string/myfont"
            android:text="@string/passwordagain"
            android:textColor="@color/fontcolor"
            android:textSize="@dimen/DIMEN_30PX" />

        <EditText
            android:id="@+id/revise_resetpassword"
            android:layout_width="0dp"
            android:layout_height="@dimen/DIMEN_60PX"
            android:layout_weight="4"
            android:background="@drawable/beijingtiao"
            android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:ems="13"
            android:fontFamily="@string/myfont"
            android:hint="确认密码"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/DIMEN_20PX"
            android:textColor="@color/fontcolor"
            android:textSize="@dimen/DIMEN_30PX" />
    </LinearLayout>


    <!--  <Button
         android:id="@+id/revise_password_btnsave"
         android:layout_width="@dimen/DIMEN_260PX"
         android:layout_height="@dimen/DIMEN_90PX"
       android:layout_marginTop="@dimen/DIMEN_60PX"
      android:background="@drawable/revise_sure_sel"
         android:textSize="@dimen/DIMEN_38PX"
        android:layout_gravity="center" /> -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/DIMEN_100PX"
        android:layout_marginRight="@dimen/DIMEN_100PX"
        android:layout_marginTop="35dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/revise_password_btnsave"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_marginRight="70dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="确定" />

        <Button
            android:id="@+id/revise_password_cancel"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="取消" />
    </LinearLayout>

</LinearLayout>
